Updated poms.
Updated the dev.annotations pom to use newer versions of Maven plugins.
Updated the archetype pom to enable annotations development in plugins
outside the dev.annotations bundle using the same code and dependencies.

Signed-off-by: Jay Jay Billings <jayjaybillings@gmail.com>